// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`declareQueries works 1`] = `
<queries(mockConstructor)
  token="foo"
>
  <mockConstructor
    foo={
      Object {
        "loading": true,
        "ready": false,
      }
    }
    token="foo"
  >
    {"token":"foo","foo":{"loading":true,"ready":false}}
  </mockConstructor>
</queries(mockConstructor)>
`;

exports[`declareQueries works with querySync 1`] = `
<queries(mockConstructor)
  token="foo"
>
  <mockConstructor
    foo={
      Object {
        "loading": false,
        "ready": true,
        "value": "foo",
      }
    }
    token="foo"
  >
    {"token":"foo","foo":{"ready":true,"loading":false,"value":"foo"}}
  </mockConstructor>
</queries(mockConstructor)>
`;
